--- a/index.html
+++ b/index.html
@@ -1,2 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My LeetCode Tracker</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>🧠 My LeetCode & Pandas Practice</h1>
+    <p>Organized by topic, language, and type</p>
+  </header>
 
-<a href=”./Daily Challenges>Daily Challenges</a>
+  <main>
+    <section>
+      <h2>📌 Quick Links</h2>
+      <ul>
+        <li><a href="pandas/pandas_basics.md">📄 Pandas Basics</a></li>
+        <li><a href="pandas/solutions/2877.py">🧪 Pandas LeetCode 2877</a></li>
+        <li><a href="problems/1-two-sum/solution.java">💡 1. Two Sum</a></li>
+        <li><a href="problems/2-add-two-numbers/solution.java">💡 2. Add Two Numbers</a></li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>📊 Categories</h2>
+      <div class="card-container">
+        <div class="card">
+          <h3>Array</h3>
+          <p><a href="problems/53-maximum-subarray/solution.java">53. Maximum Subarray</a></p>
+        </div>
+        <div class="card">
+          <h3>Dynamic Programming</h3>
+          <p><a href="problems/70-climbing-stairs/solution.java">70. Climbing Stairs</a></p>
+        </div>
+        <div class="card">
+          <h3>Pandas</h3>
+          <p><a href="pandas/solutions/2878.py">2878. Pandas Problem</a></p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Your Name | Built for tracking & sharing my DSA progress.</p>
+  </footer>
+</body>
+</html>
